--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.torries.vkfresh.MainActivity" />
         </activity>
+        <activity
+            android:name=".FavoriteActivity"
+            android:label="VK Fresh"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.torries.vkfresh.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
